# arte

./: .gitignore  README.md  build-installers.sh  mi_dibujo.arte  package-lock.json  package.json
.claude/: settings.json
.github/workflows/: build.yml
doc/: ANDROID_PLAYSTORE.md  ARCHITECTURE.md  BUILD_PRODUCCION.md  CHANGELOG.md  COMPATIBILIDAD_BINARIOS.md  FLATPAK.md  GITHUB_ACTIONS.md  HOMEBREW_CASK.md  LICENSE_SYSTEM.md  prompt.md  prompt2.md  prompt3.md  prompt4.md
flatpak/: build.sh  com.oweeme.arte.desktop  com.oweeme.arte.metainfo.xml  com.oweeme.arte.yml  exportar-bundle.sh  generar-cache.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  exportado1.mtl  mi_dibujo1.arte  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/comunicacion/: comandos.rs  mod.rs
src-tauri/src/motor_3d/: exportar.rs  mod.rs  pipeline.rs  shaders.wgsl  trazos.rs
