[package]
name = "arte"
version = "0.1.0"
description = "Arte App"
authors = ["Hector Martinez", "oweeme.com"]
edition = "2021"

[lib]
name = "arte_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = { version = "0.29", features = ["serde"] }
rayon = "1.10"
rmp-serde = "1.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
